--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
-    py36-django{22,30,31}
-    py37-django{22,30,31}
-    py38-django{22,30,31}
-    pypy3-django{22,30,31}
+    py36-django{22,30,31,32}
+    py37-django{22,30,31,32}
+    py38-django{22,30,31,32}
+    pypy3-django{22,30,31,32}
     flake8
     flakeplus
     apicheck
@@ -16,6 +16,7 @@ DJANGO =
     2.2: django22
     3.0: django30
     3.1: django31
+    3.2: django32
 
 [testenv]
 deps=
@@ -28,6 +29,7 @@ deps=
     django22: -r{toxinidir}/requirements/test-django22.txt
     django30: -r{toxinidir}/requirements/test-django30.txt
     django31: -r{toxinidir}/requirements/test-django31.txt
+    django32: -r{toxinidir}/requirements/test-django32.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
