Run tests on Python 3.9

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py36-django{22,30,31,32}
     py37-django{22,30,31,32}
     py38-django{22,30,31,32}
+    py39-django{22,30,31,32}
     pypy3-django{22,30,31,32}
     flake8
     flakeplus
@@ -104,20 +105,20 @@ commands =
     sphinx-build -W -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/linkcheck
 
 [testenv:flake8]
-basepython = python3.8
+basepython = python3.9
 commands =
     python -m flake8 {toxinidir}/django_celery_beat {toxinidir}/t
 
 [testenv:pydocstyle]
-basepython = python3.8
+basepython = python3.9
 commands =
     pydocstyle {toxinidir}/django_celery_beat
 
 [testenv:cov]
-basepython = python3.8
+basepython = python3.9
 usedevelop = true
 commands =
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
-    pip install Django==3.0
+    pip install Django==3.2
     py.test -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
