--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     py37-django{22,31,32}
     py38-django{22,31,32}
     py39-django{22,31,32}
+    py310-django{31,32}
     pypy3-django{22,31,32}
     flake8
     flakeplus
