relaxed django version in tox cov

--- a/tox.ini
+++ b/tox.ini
@@ -118,5 +118,5 @@ usedevelop = true
 commands =
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
-    pip install Django==3.2
+    pip install Django
     py.test -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
