--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
 envlist =
-    py36-django{22,31,32}
-    py37-django{22,32,40}
+    py37-django{22,32}
     py38-django{22,32,40}
     py39-django{22,32,40}
-    pypy3-django{22,32,40}
+    pypy3-django{22,32}
     flake8
     apicheck
     linkcheck
@@ -27,6 +26,7 @@ deps=
 
     django22: -r{toxinidir}/requirements/test-django22.txt
     django32: -r{toxinidir}/requirements/test-django32.txt
+    django32: -r{toxinidir}/requirements/test-django40.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
