--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements/test.txt
-    - name: Run Tests
+    - name: Run tox Tests
       run: |
-        python manage.py test
+        tox -v -- -v
