Change py.test into pytest

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ sitepackages = False
 recreate = False
 commands =
     pip list
-    py.test -xv
+    pytest -xv
 
 
 [testenv:apicheck]
@@ -64,4 +64,4 @@ commands =
     pip install -U https://github.com/celery/celery/zipball/master#egg=celery
     pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
     pip install Django
-    py.test -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
+    pytest -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
