Added Python 3.10 to test suite

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py37-django{22,32}
     py38-django{22,32,40}
     py39-django{22,32,40}
+    py310-django{32,40}
     pypy3-django{22,32}
     flake8
     apicheck
