[SGP-21988] test: use correct celery version in tests

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ commands =
     # must use older versions for starting with older celery-beat
     pip install "django>=1.11.17,<2.0"
     pip install "django-timezone-field<4.0"
-    pip install "celery<5.0.0"
+    pip install "celery~=5.0.0"
     pip list
     # run the migration for the older version
     python manage.py migrate django_celery_beat
@@ -78,7 +78,7 @@ commands =
     # must use older versions for starting with older celery-beat
     pip install "django>=1.11.17,<2.0"
     pip install "django-timezone-field<4.0"
-    pip install "celery<5.0.0"
+    pip install "celery~=5.0.0"
     pip list
     # run the migration for the older version
     python manage.py migrate django_celery_beat
