Run Tox using GitHub Actions

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,13 @@ envlist =
     pydocstyle
     cov
 
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38, apicheck, linkcheck
+    3.9: py39, flake8, pydocstyle, cov
+    pypy-3.9: pypy3
+
 [travis:env]
 DJANGO =
     2.2: django22
@@ -26,7 +33,7 @@ deps=
 
     django22: -r{toxinidir}/requirements/test-django22.txt
     django32: -r{toxinidir}/requirements/test-django32.txt
-    django32: -r{toxinidir}/requirements/test-django40.txt
+    django40: -r{toxinidir}/requirements/test-django40.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
