--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,14 @@ envlist =
     linkcheck
     pydocstyle
     cov
+    
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38, apicheck, linkcheck
+    3.9: py39, flake8, pydocstyle, cov
+    pypy-3.9: pypy3
 
-[travis:env]
-DJANGO =
-    2.2: django22
-    3.2: django32
-    4.0: django40
 
 [testenv]
 deps=
@@ -26,10 +28,10 @@ deps=
 
     django22: -r{toxinidir}/requirements/test-django22.txt
     django32: -r{toxinidir}/requirements/test-django32.txt
-    django32: -r{toxinidir}/requirements/test-django40.txt
+    django40: -r{toxinidir}/requirements/test-django40.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
-    flake8,flakeplus,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
+    flake8,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
 sitepackages = False
 recreate = False
 commands =
@@ -38,12 +40,12 @@ commands =
 
 
 [testenv:apicheck]
-basepython = python3.8
+basepython = python3.9
 commands =
     sphinx-build -W -b apicheck -d {envtmpdir}/doctrees docs docs/_build/apicheck
 
 [testenv:linkcheck]
-basepython = python3.8
+basepython = python3.9
 commands =
     sphinx-build -W -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/linkcheck
 
