restore gha env

--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,16 @@
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38, apicheck, linkcheck
+    3.9: py39, flake8, pydocstyle, cov
+    pypy-3.9: pypy3
+
+[gh-actions:env]
+DJANGO =
+    2.2: django22
+    3.2: django32
+    4.0: django40
+    
 [tox]
 envlist =
     py37-django{22,32}
@@ -9,14 +22,6 @@ envlist =
     linkcheck
     pydocstyle
     cov
-    
-[gh-actions]
-python =
-    3.7: py37
-    3.8: py38, apicheck, linkcheck
-    3.9: py39, flake8, pydocstyle, cov
-    pypy-3.9: pypy3
-
 
 [testenv]
 deps=
