Django 4.0 and Python 3.10 support (#528)
* Replaced pytz with zoneinfo

* Fixed tests

* Added Python 3.10 to test suite

* Removed now-redundant testing requirement

* Bumped minimum django-timezone-field version

* Upgraded pytest

* Addressed points made in the PR

* Added Python 3.10 environment to GitHub Actions

* Removed pytz from new test

* Fixed test

* Added RabbitMQ to GitHub Actions

* Fixed apicheck and linkcheck calling wrong Django version

* Fixed flake8 woes

* Fixed Sphinx generation warnings

Co-authored-by: Bruno Marques <bruno.oliveira_marques@siemens.com>

--- a/tox.ini
+++ b/tox.ini
@@ -3,18 +3,20 @@ python =
     3.7: py37
     3.8: py38, apicheck, linkcheck
     3.9: py39, flake8, pydocstyle, cov
+    3.10: py310
     pypy-3.9: pypy3
 
 [gh-actions:env]
 DJANGO =
     3.2: django32
     4.0: django40
-    
+
 [tox]
 envlist =
     py37-django{32}
     py38-django{32,40}
     py39-django{32,40}
+    py310-django{32,40}
     pypy3-django{32}
     flake8
     apicheck
@@ -43,12 +45,12 @@ commands =
 
 
 [testenv:apicheck]
-basepython = python3.9
+basepython = python3.8
 commands =
     sphinx-build -W -b apicheck -d {envtmpdir}/doctrees docs docs/_build/apicheck
 
 [testenv:linkcheck]
-basepython = python3.9
+basepython = python3.8
 commands =
     sphinx-build -W -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/linkcheck
 
