Fix apicheck CI task and add additional testing for PyPy 3.9 (#616)
* Fix sphinx apicheck

  ==============================
   Undocumented Autodoc Modules
  ==============================

  py
  --

  - django_celery_beat.signals

* Add Python 3.11 support

* Add additional django testing for PyPy 3.9

* Update .github/workflows/test.yml

* Update setup.py

Co-authored-by: Asif Saif Uddin <auvipy@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ python =
     3.8: py38, apicheck, linkcheck
     3.9: py39, flake8, pydocstyle, cov
     3.10: py310
+    3.11: py311
     pypy-3.9: pypy3
 
 [gh-actions:env]
@@ -18,7 +19,8 @@ envlist =
     py38-django{32,40,41}
     py39-django{32,40,41}
     py310-django{32,40,41}
-    pypy3-django{32}
+    py311-django(41}
+    pypy3-django{32,40,41}
     flake8
     apicheck
     linkcheck
