Declare support for Django 4.2
- add tests
- adjust requirements
- adjust classes

Fixes #626

--- a/tox.ini
+++ b/tox.ini
@@ -12,15 +12,16 @@ DJANGO =
     3.2: django32
     4.0: django40
     4.1: django41
+    4.2: django42
 
 [tox]
 envlist =
     py37-django{32}
-    py38-django{32,40,41}
-    py39-django{32,40,41}
-    py310-django{32,40,41}
-    py311-django(41}
-    pypy3-django{32,40,41}
+    py38-django{32,40,41,42}
+    py39-django{32,40,41,42}
+    py310-django{32,40,41,42}
+    py311-django{41,42}
+    pypy3-django{32,40,41,42}
     flake8
     apicheck
     linkcheck
@@ -38,6 +39,7 @@ deps=
     django32: -r{toxinidir}/requirements/test-django32.txt
     django40: -r{toxinidir}/requirements/test-django40.txt
     django41: -r{toxinidir}/requirements/test-django41.txt
+    django42: -r{toxinidir}/requirements/test-django42.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
