--- a/tox.ini
+++ b/tox.ini
@@ -12,15 +12,16 @@ DJANGO =
     3.2: django32
     4.1: django41
     4.2: django42
+    5.0: django50
 
 [tox]
 envlist =
     py38-django{32,41,42}
     py39-django{32,41,42}
-    py310-django{32,41,42}
-    py311-django{41,42}
-    py312-django{41,42}
-    pypy3-django{32,41,42}
+    py310-django{32,41,42,50}
+    py311-django{41,42,50}
+    py312-django{41,42,50}
+    pypy3-django{32,41,42,50}
     flake8
     apicheck
     linkcheck
@@ -38,6 +39,7 @@ deps=
     django32: -r{toxinidir}/requirements/test-django32.txt
     django41: -r{toxinidir}/requirements/test-django41.txt
     django42: -r{toxinidir}/requirements/test-django42.txt
+    django50: -r{toxinidir}/requirements/test-django50.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
