--- a/tox.ini
+++ b/tox.ini
@@ -5,21 +5,22 @@ python =
     3.10: py310
     3.11: py311
     3.12: py312
-    pypy-3.9: pypy3
+    pypy-3.10: pypy3
 
 [gh-actions:env]
 DJANGO =
     3.2: django32
     4.1: django41
     4.2: django42
+    5.0: django50
 
 [tox]
 envlist =
     py38-django{32,41,42}
     py39-django{32,41,42}
-    py310-django{32,41,42}
-    py311-django{41,42}
-    py312-django{41,42}
+    py310-django{32,41,42,50}
+    py311-django{41,42,50}
+    py312-django{41,42,50}
     pypy3-django{32,41,42}
     flake8
     apicheck
@@ -38,6 +39,7 @@ deps=
     django32: -r{toxinidir}/requirements/test-django32.txt
     django41: -r{toxinidir}/requirements/test-django41.txt
     django42: -r{toxinidir}/requirements/test-django42.txt
+    django50: -r{toxinidir}/requirements/test-django50.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
@@ -72,7 +74,7 @@ commands =
 basepython = python3.9
 usedevelop = true
 commands =
-    pip install -U https://github.com/celery/celery/zipball/master#egg=celery
-    pip install -U https://github.com/celery/kombu/zipball/master#egg=kombu
+    pip install --upgrade https://github.com/celery/celery/zipball/main#egg=celery
+    pip install --upgrade https://github.com/celery/kombu/zipball/main#egg=kombu
     pip install Django
     pytest -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
