--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [gh-actions]
 python =
     3.8: py38, apicheck, linkcheck
-    3.9: py39, flake8, pydocstyle, cov
+    3.9: py39, ruff, cov
     3.10: py310
     3.11: py311
     3.12: py312
@@ -22,10 +22,9 @@ envlist =
     py311-django{41,42,50}
     py312-django{41,42,50}
     pypy3-django{32,41,42}
-    flake8
+    ruff
     apicheck
     linkcheck
-    pydocstyle
     cov
 
 [testenv]
@@ -42,7 +41,7 @@ deps=
     django50: -r{toxinidir}/requirements/test-django50.txt
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
-    flake8,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
+    ruff: -r{toxinidir}/requirements/pkgutils.txt
 sitepackages = False
 recreate = False
 commands =
@@ -60,15 +59,9 @@ basepython = python3.8
 commands =
     sphinx-build -W -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/linkcheck
 
-[testenv:flake8]
-basepython = python3.9
+[testenv:ruff]
 commands =
-    python -m flake8 {toxinidir}/django_celery_beat {toxinidir}/t
-
-[testenv:pydocstyle]
-basepython = python3.9
-commands =
-    pydocstyle {toxinidir}/django_celery_beat
+    ruff .
 
 [testenv:cov]
 basepython = python3.9
