Remove requirements//test-djangoXY.txt

--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,5 @@
+; https://docs.djangoproject.com/en/stable/faq/install/#what-python-version-can-i-use-with-django
+
 [gh-actions]
 python =
     3.8: py38, apicheck, linkcheck
@@ -16,12 +18,12 @@ DJANGO =
 
 [tox]
 envlist =
-    py38-django{32,41,42}
-    py39-django{32,41,42}
-    py310-django{32,41,42,50}
-    py311-django{41,42,50}
-    py312-django{41,42,50}
-    pypy3-django{32,41,42,50}
+    py38-django{32,42}
+    py39-django{32,42}
+    py310-django{32,42,50}
+    py311-django{42,50}
+    py312-django{42,50}
+    pypy3-django{32,42,50}
     flake8
     apicheck
     linkcheck
@@ -36,10 +38,10 @@ deps=
 
     cov: -r{toxinidir}/requirements/test-django.txt
 
-    django32: -r{toxinidir}/requirements/test-django32.txt
-    django41: -r{toxinidir}/requirements/test-django41.txt
-    django42: -r{toxinidir}/requirements/test-django42.txt
-    django50: -r{toxinidir}/requirements/test-django50.txt
+	django32: Django ~= 3.2
+	django41: Django ~= 4.1
+	django42: Django ~= 4.2
+	django50: Django ~= 5.0
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
