--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install --yes --no-install-recommends \
         wait-for-it
 
 RUN pip3 install --user \
+        build \
         django-createsuperuserwithpassword \
         psycopg2-binary
 
@@ -19,7 +20,7 @@ COPY requirements/        /app/requirements/
 
 WORKDIR /app
 
-RUN python3 setup.py develop --user
+RUN pip3 install --editable --user ".[develop]"
 
 
 WORKDIR /
