docker-compose.yml: tags: - django-celery-beat_base:latest

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     build:
       context: .
       dockerfile: docker/base/Dockerfile
+      tags:
+        - django-celery-beat_base:latest
     command: ["sleep", "inf"]
 
   django:
