Move pytest to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -80,5 +80,5 @@ usedevelop = true
 commands =
     pip install --upgrade https://github.com/celery/celery/zipball/main#egg=celery
     pip install --upgrade https://github.com/celery/kombu/zipball/main#egg=kombu
-    pip install Django
+    pip install Django pytest
     pytest -x --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
