Running setup.py directly is deprecated (#737)
* Running setup.py directly is deprecated

* Makefile

* Apply suggestions from code review

Co-authored-by: Mathieu Dupuy <deronnax@gmail.com>

* Update Makefile

Co-authored-by: Adam Weiss <amweiss@users.noreply.github.com>

* Update docker/base/Dockerfile

Co-authored-by: Adam Weiss <amweiss@users.noreply.github.com>

* Dockerfile: RUN pip3 install --user --editable ".[develop]"

Co-authored-by: Mathieu Dupuy <deronnax@gmail.com>

* docker-compose.yml: tags: - django-celery-beat_base:latest

* python -m pip install --upgrade build twine

Co-authored-by: David Hotham <david.hotham@microsoft.com>

---------

Co-authored-by: Mathieu Dupuy <deronnax@gmail.com>
Co-authored-by: Adam Weiss <amweiss@users.noreply.github.com>
Co-authored-by: David Hotham <david.hotham@microsoft.com>

--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install --yes --no-install-recommends \
         wait-for-it
 
 RUN pip3 install --user \
+        build \
         django-createsuperuserwithpassword \
         psycopg2-binary
 
@@ -19,8 +20,7 @@ COPY requirements/        /app/requirements/
 
 WORKDIR /app
 
-RUN python3 setup.py develop --user
-
+RUN pip3 install --user --editable ".[develop]"
 
 WORKDIR /
 
