--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,3 +48,9 @@ jobs:
       run: tox
       env:
         DJANGO: ${{ matrix.django-version }}
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        fail_ci_if_error: true # optional (default = false)
+        token: ${{ secrets.CODECOV_TOKEN }}
+        verbose: true # optional (default = false)
