Added --cov-report term {posargs}

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ sitepackages = False
 recreate = False
 commands =
     pip list
-    pytest -xv --cov=django_celery_beat --cov-report=xml --no-cov-on-fail
+    pytest -xv --cov=django_celery_beat --cov-report=xml --no-cov-on-fail --cov-report term {posargs}
 
 
 [testenv:apicheck]
