Added a new step to upload code coverage report to codecov (#793)
* Added ".vscode" to .gitignore

* Added a new step to generate code coverage report

* Added --cov-report term {posargs}

* Skipping pypy for code coverage

* Added code coverage config to pyproject.toml

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,3 +127,25 @@ lint.pylint.allow-magic-value-types = [
   "str",
 ]
 lint.pylint.max-args = 8 # Default: 5
+
+[tool.coverage.run]
+branch = true
+cover_pylib = false
+include = [ "*django_celery_beat/*" ]
+omit = [ "django_celery_beat.tests.*" ]
+
+[tool.coverage.report]
+exclude_lines = [
+  "pragma: no cover",
+  "if TYPE_CHECKING:",
+  "except ImportError:",
+]
+omit = [
+  "*/python?.?/*",
+  "*/site-packages/*",
+  "*/pypy/*",
+  "*/.tox/*",
+  "*/docker/*",
+  "*/docs/*",
+  "*/test_*.py",
+]
