--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@ python =
     3.10: py310
     3.11: py311
     3.12: py312
-    pypy-3.10: pypy3
+    3.13: py313
+    pypy-3.11: pypy3
 
 [gh-actions:env]
 DJANGO =
@@ -16,15 +17,17 @@ DJANGO =
     4.2: django42
     5.0: django50
     5.1: django51
+    5.2: django52
 
 [tox]
 envlist =
     py38-django{32,42}
     py39-django{32,42}
-    py310-django{32,42,50,51}
-    py311-django{42,50,51}
-    py312-django{42,50,51}
-    pypy3-django{32,42,50,51}
+    py310-django{32,42,50,51,52}
+    py311-django{42,50,51,52}
+    py312-django{42,50,51,52}
+    py313-django{42,50,51,52}
+    pypy3-django{32,42,50,51,52}
     flake8
     apicheck
     linkcheck
@@ -43,7 +46,8 @@ deps=
 	django41: Django ~= 4.1
 	django42: Django ~= 4.2
 	django50: Django ~= 5.0
-	django51: Django ~= 5.1rc1
+	django51: Django ~= 5.1
+	django52: Django ~= 5.2
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
@@ -55,12 +59,12 @@ commands =
 
 
 [testenv:apicheck]
-basepython = python3.8
+basepython = python3.9
 commands =
     sphinx-build -W -b apicheck -d {envtmpdir}/doctrees docs docs/_build/apicheck
 
 [testenv:linkcheck]
-basepython = python3.8
+basepython = python3.9
 commands =
     sphinx-build -W -b linkcheck -d {envtmpdir}/doctrees docs docs/_build/linkcheck
 
