--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: # https://docs.djangoproject.com/en/stable/faq/install/#what-python-version-can-i-use-with-django
-        django-version: ["3.2", "4.2", "5.0", "5.1", "5.2"]
+        django-version: ["3.2", "4.2", "5.0", "5.1", "5.2rc1"]
         python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', 'pypy-3.11']
         exclude:
           - django-version: "3.2"
