--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ python =
     3.10: py310
     3.11: py311
     3.12: py312
+    3.13: py313
     pypy-3.10: pypy3
 
 [gh-actions:env]
@@ -23,6 +24,7 @@ envlist =
     py310-django{32,42,51}
     py311-django{42,51,52}
     py312-django{42,51,52}
+    py313-django{52}
     pypy3-django{32,42,51,52}
     flake8
     apicheck
