--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: # https://docs.djangoproject.com/en/stable/faq/install/#what-python-version-can-i-use-with-django
-        django-version: ["3.2", "4.2", "5.0", "5.1", "5.2rc1"]
+        django-version: ["3.2", "4.2", "5.1", "5.2"]
         python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', 'pypy-3.10']
         exclude:
           - django-version: "3.2"
@@ -23,13 +23,9 @@ jobs:
             python-version: "3.13"
           - django-version: "4.2"
             python-version: "3.13"
-          - django-version: "5.0"
-            python-version: "3.9"
-          - django-version: "5.0"
-            python-version: "3.13"
           - django-version: "5.1"
             python-version: "3.9"
-          - django-version: "5.2rc1"
+          - django-version: "5.2"
             python-version: "3.9"
 
     services:
