--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -1,7 +1,8 @@
+# Copyright (C) 2020-2030 Asif Saif Uddin <auvipy@gmail.com> and contributors.
 # Copyright (C) 2019 Sebastian Pipping <sebastian@pipping.org>
 # Licensed under the BSD License (3 clause, also known as the new BSD license)
 
-FROM python:3.9-slim
+FROM python:3.12-slim
 
 ENV PATH=${PATH}:/root/.local/bin
 
