--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix: # https://docs.djangoproject.com/en/stable/faq/install/#what-python-version-can-i-use-with-django
         django-version: ["3.2", "4.2", "5.1", "5.2"]
-        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', 'pypy-3.10']
+        python-version: ['3.8','3.9', '3.10', '3.11', '3.12', '3.13', 'pypy-3.10']
         exclude:
           - django-version: "3.2"
             python-version: "3.11"
@@ -27,6 +27,10 @@ jobs:
             python-version: "3.9"
           - django-version: "5.2"
             python-version: "3.9"
+          - django-version: "5.1"
+            python-version: "3.8"
+          - django-version: "5.2"
+            python-version: "3.8"
 
     services:
       rabbitmq:
