--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ DJANGO_SETTINGS_MODULE=t.proj.settings
 ignore = N806, N802, N801, N803, W503, W504
 exclude =
     **/migrations/*.py
+max-line-length = 88
 
 [pep257]
 ignore = D102,D104,D203,D105,D213
