use django 5.2 stable version in ci

--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ deps=
 	django32: Django ~= 3.2
 	django42: Django ~= 4.2
 	django51: Django ~= 5.1
-    django52: Django ~= 5.2rc1
+    django52: Django ~= 5.2
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
