--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,10 +38,10 @@ repos:
         args: [--target-version, "3.2"]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.12.7
+    rev: v0.11.13
     hooks:  # Format before linting
+      - id: ruff-check
       # - id: ruff-format
-      - id: ruff
 
   - repo: https://github.com/tox-dev/pyproject-fmt
     rev: v2.6.0
