--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,8 +59,10 @@ jobs:
         DJANGO: ${{ matrix.django-version }}
     - name: Upload coverage reports to Codecov
       if: ${{ matrix.python-version != 'pypy-3.11' }}
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       uses: codecov/codecov-action@v5
       with:
         fail_ci_if_error: true # optional (default = false)
-        token: ${{ secrets.CODECOV_TOKEN }}
+        token: ${{ CODECOV_TOKEN }}
         verbose: true # optional (default = false)
