--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,5 +64,5 @@ jobs:
       uses: codecov/codecov-action@v5
       with:
         fail_ci_if_error: true # optional (default = false)
-        token: ${{ CODECOV_TOKEN }}
+        token: ${{ secrets.CODECOV_TOKEN }}
         verbose: true # optional (default = false)
