--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix: # https://docs.djangoproject.com/en/stable/faq/install/#what-python-version-can-i-use-with-django
         django-version: ["3.2", "4.2", "5.1", "5.2"]
-        python-version: ['3.8','3.9', '3.10', '3.11', '3.12', '3.13', 'pypy-3.11']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13', 'pypy-3.11']
         exclude:
           - django-version: "3.2"
             python-version: "3.11"
@@ -31,6 +31,9 @@ jobs:
             python-version: "3.8"
           - django-version: "5.2"
             python-version: "3.8"
+        include: 
+          - django-version: "5.2"
+            python-version: "3.14"
 
     services:
       rabbitmq:
@@ -44,6 +47,7 @@ jobs:
       uses: useblacksmith/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
+        allow-prereleases: true
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
