--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ python =
     3.11: py311
     3.12: py312
     3.13: py313
+    3.14: py314
     pypy-3.10: pypy3
 
 [gh-actions:env]
@@ -25,6 +26,7 @@ envlist =
     py311-django{42,51,52}
     py312-django{42,51,52}
     py313-django{52}
+    py314-django{52}
     pypy3-django{32,42,51,52}
     flake8
     apicheck
