Add Django 6.0 support
- Update classifiers in setup.py
- Add Django 6.0 to tox environments
- Update documentation

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ DJANGO =
     4.2: django42
     5.1: django51
     5.2: django52
+    6.0: django60
 
 [tox]
 envlist =
@@ -24,9 +25,9 @@ envlist =
     py39-django{32,42}
     py310-django{32,42,51}
     py311-django{42,51,52}
-    py312-django{42,51,52}
-    py313-django{52}
-    py314-django{52}
+    py312-django{42,51,52,60}
+    py313-django{52,60}
+    py314-django{52,60}
     pypy3-django{32,42,51,52}
     flake8
     apicheck
@@ -46,6 +47,7 @@ deps=
 	django42: Django ~= 4.2
 	django51: Django ~= 5.1
     django52: Django ~= 5.2
+    django60: Django ~= 6.0
 
     linkcheck,apicheck: -r{toxinidir}/requirements/docs.txt
     flake8,pydocstyle: -r{toxinidir}/requirements/pkgutils.txt
